@@ -1,5 +1,7 @@
 Revision history for Test::Count
 
+          - Started adding examples in lib/Test/Count.pm .
+
 0.0600    Sun Sep 27 07:31:36 IST 2009
           - Added Test::Count::FileMutator that can also handle the
           {{ source "file" }} include statement.
